--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
              <div class="card">
-                <div class="text">Ти</br> будеш моєю</br>Валентинкою?</div>
+                <div class="text">Ти</br> мені</br>подобаєшся</div>
                 <div class="heart">
                 </div>
             </div>
