--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
              <div class="card">
-                <div class="text">Будешь</br> моей</br>Валентинкой?</div>
+                <div class="text">Будешь</br> Моей</br>Валентинкой?</div>
                 <div class="heart">
                 </div>
             </div>
